# agentshield

./: .cursorrules  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  HANDOFF.md  PRODUCT_REALITY_AUDIT_2026-06-02.md  PROJECT_CONTEXT.generated.md  PROJECT_CONTEXT.md  README.md  agentshield-after-refresh-persistence.md  agentshield-after-signout.md  agentshield-agent-created-snapshot.md  agentshield-behavior-after-runtime.md  agentshield-behavior-preruntime.md  agentshield-chat-browser-after.md  agentshield-login-form.md  agentshield-register-agent-modal.md  agentshield-sdk-key-view.md  agentshield-sdk-tab.md  docker-compose.yml  playwright.config.ts  pyproject.toml  render.yaml  requirements.txt  vercel.json
.antigravity/rules/: instructions-ai.md
.cursor/rules/: instructions-ai.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  e2e-playwright.yml  release-sdk.yml  smoke-test.yml
.junie/: guidelines.md
.windsurf/rules/: instructions-ai.md
AgentShield_Production_Documentation_Pack/: README.md
AgentShield_Production_Documentation_Pack/docx/: AgentShield_API_and_Event_Contracts.docx  AgentShield_Implementation_Runbook.docx  AgentShield_Security_Threat_Model.docx  AgentShield_Test_and_Acceptance_Plan.docx
AgentShield_Production_Documentation_Pack/sources/: AgentShield_API_and_Event_Contracts.md  AgentShield_Security_Threat_Model.md
ai-system/: handoff.md
api/: index.py
archive/audits/: AGENT_SKILLS_INVENTORY.md  PROJECT_AUDIT.md  agentshield-after-kill-switch.md  agentshield-agents-after-runtime.md  agentshield-agents-empty-snapshot.md  agentshield-attack-after-select-data.md  agentshield-attack-sim-initial.md  agentshield-chat-browser-before.md  agentshield-dashboard-after-real-runtime-navigate.md  agentshield-dashboard-after-real-runtime.md  agentshield-dashboard-after-sim.md  agentshield-dashboard-before-runtime.md  agentshield-landing-snapshot.md  agentshield-ledger-final.md  agentshield-post-relogin.md  agentshield-post-signup-snapshot.md  (+3 more)
backend/: .env.example  alembic.ini  openapi.json  verify_ledger.py
docs/: API_KEYS_AND_FREE_SETUP.md  STAGING_DEPLOYMENT.md
examples/: langchain_agent.py
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
k8s/: api.yaml  ingress.yaml  postgres.yaml  redis.yaml
scripts/: build_agentshield_docs.py  chat_with_gemini_agent.py  check_production_env.py  demo.py  export_openapi.py  external_demo_agent.py  run_shielded_agent.py  smoke_test.sh  verify_sdk.js
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/agentshield/: __init__.py  client.py  py.typed
sdk/python/agentshield/integrations/: __init__.py  langchain.py
tests/: test_integration_postgres.py  test_production_readiness.py  test_rate_limiting.py  test_security_core.py
(+52 files in other folders)
