[project]
name = "agentshield"
version = "0.1.0"
description = "Production-oriented AI agent security middleware prototype."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2",
  "uvicorn>=0.27",
  "cryptography>=42",
  "psycopg[binary]>=3.2",
  "psycopg-pool>=3.2",
  "alembic>=1.13",
  "redis>=5",
  "boto3",
]

[tool.pytest.ini_options]
pythonpath = ["backend", "sdk/python"]
testpaths = ["tests"]
